added lessions for Adidah 1 and 2 topics
added lessions for Adidah 1 and 2 topics

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/view/aqidah.jsp=UTF-8
 encoding//WebContent/WEB-INF/view/home.jsp=UTF-8
 encoding//WebContent/WEB-INF/view/intro.jsp=UTF-8
